--- a/html/tables/assessment-start/minimal-table.css
+++ b/html/tables/assessment-start/minimal-table.css
@@ -33,3 +33,16 @@ tr:nth-child(odd) td {
 caption {
   padding: 10px;
 }
+
+.name {
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
+
+.name.column-header {
+  border-top: 2px solid black;
+}
+
+.name.pluto {
+    border-bottom: 2px solid black;
+}
